# runtm

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: introduction.mdx  mint.json  quickstart.mdx
docs/api/: logs.mdx  overview.mdx
docs/cli/: approve.mdx  auth.mdx  config.mdx  deploy.mdx  destroy.mdx  domain.mdx  fix.mdx  init.mdx  list.mdx  logs.mdx  overview.mdx  run.mdx  search.mdx  secrets.mdx  session.mdx  status.mdx  validate.mdx
docs/features/: auth.mdx  custom-domains.mdx  database.mdx  machine-tiers.mdx  secrets.mdx
docs/guides/: agent-workflow.mdx  discovery.mdx  logs-debugging.mdx  troubleshooting.mdx
docs/self-hosting/: admin-commands.mdx  configuration.mdx  docker-compose.mdx  overview.mdx  requirements.mdx
docs/templates/: backend-service.mdx  overview.mdx  static-site.mdx  web-app.mdx
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  entrypoint-api.sh  local.env.example
scripts/: dev.sh  release.sh
templates/: LICENSE
templates/backend-service/: .env.local.example  .gitignore  .runtmignore  AGENT.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  runtm.discovery.yaml  runtm.yaml
templates/backend-service/.github/: copilot-instructions.md
templates/backend-service/app/: __init__.py  main.py
templates/backend-service/app/api/v1/: health.py  run.py
templates/backend-service/app/core/: config.py  logging.py
templates/backend-service/app/db/: __init__.py  base.py  migrations.py  session.py
templates/backend-service/app/db/alembic/: env.py
templates/backend-service/app/db/models/: __init__.py
templates/backend-service/app/services/: __init__.py  processor.py
templates/backend-service/tests/: __init__.py  test_health.py  test_run.py
templates/static-site/: .cursorignore  .gitignore  .runtmignore  AGENT.md  CLAUDE.md  Dockerfile  README.md  next.config.js  package.json  runtm.discovery.yaml  runtm.yaml  tailwind.config.js
templates/web-app/: .env.local.example  .gitignore  (+7 more)
(+68 files in other folders)
