[project]
name = "runtm"
version = "0.1.0"
description = "The runtime + control plane for agent-built software: create, run, deploy, observe, reuse and destroy apps with guardrails and speed"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Gustavo Trigos", email = "gus@runtm.com" },
]
maintainers = [
    { name = "Gustavo Trigos", email = "gus@runtm.com" },
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["packages/*/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["runtm_shared", "runtm_api", "runtm_worker", "runtm_cli"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["redis.*", "rq.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

